--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tamagui/config": "^2.0.0-rc.12",
+    "@tamagui/core": "^2.0.0-rc.12",
+    "@tamagui/lucide-icons": "^2.0.0-rc.12",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tamagui": "^2.0.0-rc.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tamagui/cli": "^2.0.0-rc.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
