--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tamagui/core": "^2.0.0-rc.12",
     "@tamagui/lucide-icons": "^2.0.0-rc.12",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tamagui": "^2.0.0-rc.12"
