--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tamagui/config": "^2.0.0-rc.12",
     "@tamagui/core": "^2.0.0-rc.12",
     "@tamagui/lucide-icons": "^2.0.0-rc.12",
+    "gsap": "^3.14.2",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
